-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.4, 5.0.0 Beta 2
-
None
-
9b5a55101d7c519446c1cf3706a235dea81ad4de
When types are registered using qmlRegisterType there is no way to unregister them save for restarting the application. This leads to problems when you want to change the types available to the application
1) Re-registered types on top of the same uri/version/name lead to a memory leak because the inaccessible previous type information is still there
2) There is no way to remove a Type save for overwriting it with an invalid type registration (which still leaves a memory leak).
Some API should be added to allow flushing of the global type cache.
For Gerrit Dashboard: QTBUG-28572 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
45783,3 | Add qmlClearRegisteredTypes Function | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
52029,5 | Add qmlClearRegisteredTypes Function | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
55659,1 | Fix MSVC-warning about inconsistent DLL-linkage. | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |