src/qml/qml/qqmlimport.cpp
@@ -163,6 +163,14 @@ QQmlType *getTypeForUrl(const QString &urlString, const QHashedStringRef& typeNa
 
 typedef QMap<QString, QString> StringStringMap;
 Q_GLOBAL_STATIC(StringStringMap, qmlEnginePluginsWithRegisteredTypes); // stores the uri
+void qmlClearEnginePlugins()
+{
+    foreach (const QString &s, qmlEnginePluginsWithRegisteredTypes()->values()) {
+        QPluginLoader loader(s);
+        loader.unload(); // ### Always returns false, worth doing?
+    }
+    qmlEnginePluginsWithRegisteredTypes()->clear();
+}
 
 class QQmlImportNamespace
 {
